[package]
name = "mother-brain-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
openssl = "0.10.63"
serenity = { default-features = false, version = "0.12.0", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "builder"
] }
rand = "0.8.5"
rand_chacha = "*"
rs_sha512 = "0.1.3"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
